berhasil membuat fungsi CRUD View dari kategoriOnderdil

--- a/src/edu/timnas/sistembengkelmotor/view/KategoriOnderdilView.form
+++ b/src/edu/timnas/sistembengkelmotor/view/KategoriOnderdilView.form
@@ -134,6 +134,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="RESET"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKatonResetActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnKatonSave">
       <Properties>
@@ -147,11 +150,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="UPDATE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKatonUpdateActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnKatonDelete">
       <Properties>
         <Property name="text" type="java.lang.String" value="DELETE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnKatonDeleteActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
