--- a/src/edu/timnas/sistembengkelmotor/view/RakView.form
+++ b/src/edu/timnas/sistembengkelmotor/view/RakView.form
@@ -69,15 +69,15 @@
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="173" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" pref="257" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnRakReset" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnRakSave" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnRakUpdate" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnRakDelete" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="24" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
